--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -1,7 +1,7 @@
 .nav 
 { 
    background-color:  #a590b1;
-   font-color:#454561  ;
+   color:#454561  ;
    list-style: none;
    text-align: center;
    padding: 20px 0;
@@ -15,6 +15,7 @@ font-size: 17px;
      margin: 0 15px;
   padding: 10px 20px;
   border: 2px solid #454561;  
+  position: relative;
 }
 
 .nav > li > a {
@@ -27,4 +28,38 @@ font-size: 17px;
 
  .nav > li > a:hover {
     color: #c3bcbd ;
+}
+.nav > li.dropdown-menu {width: 200px;}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color:  #a590b1;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    min-width: 160px;
+    box-shadow: 0px 4px 8px;
+    width: 100%;
+    font-weight: bold;
+
+}
+.dropdown-menu li a {
+  display: block;
+  padding: 10px;
+  color: #454561;
+  text-decoration: none;
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+border: 2px solid #454561;
+}
+
+.dropdown-menu li a:hover {
+  background-color: #dcd1e8;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
 }
