--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -24,6 +24,7 @@ font-size: 17px;
     font-weight: bold;
     padding: 20px 50px;
     display: inline-block;
+    width: 100px;
 }
 
  .nav > li > a:hover {
@@ -36,7 +37,7 @@ font-size: 17px;
     position: absolute;
     top: 100%;
     left: 0;
-    background-color:  #a590b1;
+    background-color:  rgba(0,0,0,0.8);
     list-style: none;
     margin: 0;
     padding: 0;
@@ -44,7 +45,7 @@ font-size: 17px;
     box-shadow: 0px 4px 8px;
     width: 100%;
     font-weight: bold;
-
+    z-index: 10;
 }
 .dropdown-menu li a {
   display: block;
@@ -57,9 +58,77 @@ border: 2px solid #454561;
 }
 
 .dropdown-menu li a:hover {
-  background-color: #dcd1e8;
+  background-color: #fff;
 }
 
 .dropdown:hover .dropdown-menu {
   display: block;
+background-color: #a590b1;
+}
+
+header {width: 100%;
+background-color: #a590b1;}
+
+header ul {max-width: 1200px; ; 
+  justify-content:flex-end; 
+  display: flex;
+margin: 0 auto;
+padding: auto;
+}
+
+header ul li {
+  list-style: none;
+  position: relative;
+  padding: 10px 0px;
+transition: 0.5s;
+box-sizing: border-box;
+border-right: 1px solid rgba(255, 255, 255, .2);
+}
+
+header ul li a {text-decoration: none;
+color: #fff;
+padding: 0 20px;
+}
+
+header ul li:hover {
+  background:none;
+  opacity: .3;
+}
+
+
+
+header ul li:last-child {
+  border-right: none;
+}
+
+header ul li ul {
+  position: absolute;
+  background:#a590b1;
+  top: 44px;
+left: 0;
+display: block;
+width: 200px;
+transition: 0.5s;
+opacity: 0;
+visibility: hidden;
+}
+
+header ul li:hover ul {
+  opacity: 0.3;
+visibility: visible;
+
+}
+header ul li ul li {
+  border-bottom: 1px solid rgba(255, 255, 255, .2);
+  border-right: none;
+}
+
+@media (max-width:640px;) {
+header ul {
+  display: block;
+}
+header ul li {display: block;}
+
+header ul li ul {width: 100%;
+z-index: 1;}
 }
