--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -123,7 +123,11 @@ margin: 0;}
 padding: 10px;
 background-color: #c3bcbd; border-radius: 15px;}
 
-
+@media screen and (max-width:640px) {
+    .container {width: 100%;}
+    .quote-box {width: 70%;}
+    .img {width: fit-content;}
+}
 
 
 
