--- a/webdevelopment/navRESPONSIVETEST.css
+++ b/webdevelopment/navRESPONSIVETEST.css
@@ -20,13 +20,18 @@ a {
 .submenu {
     list-style-type: none;
 }
-.logo {font-size: 20px;
+.logo {font-size: 18px;
 padding: 7.5px 10px 7.5px 0px;}
 
 .item {padding: 10px;
+    display: none;
 }
 
-.item a:hover, 
+.item.button{
+    padding: 9px 5px;
+}
+
+.item:not(.button, .logo) a:hover,
 .item a:hover::after {
     color: #ccc;
 }
@@ -104,4 +109,31 @@ display: none;
     display: block;
 }
 
+/* Desktop Menu */
+@media all and (min-width: 960px) {
+    .item{
+        order: 1;
+        position: relative;
+        display: block;
+        width: auto;
+    }
+}
+.button {
+    order: 2;
+}
 
+.submenu-active .submenu {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 68px;
+    background-color: #a590b1;
+}
+
+.toggle {
+    display:block;
+}
+
+.submenu-active {
+    border-radius: 0;
+}
