--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -35,9 +35,9 @@ font-size: 30px;}
 font-family: fredoka;
     padding: 10px 20px;
     margin: 20px auto;
-    background-color: #a590b1 ;
     border-radius: 15px;
     font-size: 25px;
+    font-weight: lighter;
 }
 
 
@@ -90,8 +90,8 @@ line-height: 2;
 .ul {align-items: center;}
 
 .outer-flex-container {
-   display: flex; /* Makes the parent a flex container */
-   flex-direction: row; /* Arranges flex items (your two .flex-container divs) horizontally */
+   display: flex; 
+   flex-direction: row; 
    justify-content: space-around;
 
 }
@@ -112,12 +112,13 @@ margin-left: 10px;
   background: #cccccc;
   font-family: fredoka;
   padding: 2rem;
-  margin: 1rem 0;
+  margin: 1rem auto;
   max-width: 1100px;
   width: 100%;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   border-radius: 8px;
 }
+
 .subsection {
   background: #c3bcbd;
   padding: 1rem;
@@ -140,6 +141,11 @@ margin-left: 10px;
   margin: 0 auto;
 }
 
+.textbox2 {
+  text-align: center;
+  margin: 20px auto;
+}
+
 .quotes {
     display: block;
     padding:20px;
@@ -148,7 +154,8 @@ margin-left: 10px;
 font-size: 18px;
 font-weight: bolder;
 text-align: left;
-margin: 0;}
+margin: 0;
+}
 
 .quote-box {max-width: 600px;
 padding: 10px;
@@ -169,9 +176,48 @@ margin-right: 10px;
   margin-top: 0;
   margin-bottom: 0;
 }
+
+#frogimage {
+  height: 300px;
+  width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: 125px;
+  border-radius: 15px;
+}
+
+
+#imgalison {
+  height: 300px;
+  width: 300px;
+  display: flex;
+  margin-left: auto;
+  margin-right: 0;
+  border-radius: 15px;
+
+}
+
+.purpose {
+  text-align: left;
+  padding: 20px;
+  margin: 20px auto;
+  background-color: #c3bcbd;
+  border-radius: 15px;
+  width: 600px;
+  height: auto;
+  line-height: 1.5;
+}
+
+.purpose-image-flex {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+}
+
 .ol {
   text-align: left;
-  line-height: 1.5;
+ line-height: 1.5 !important;
   padding-left: 20px;
   padding-bottom: 20px;
   padding-top: 20px;
@@ -180,40 +226,168 @@ margin-right: 10px;
   border-radius: 15px;
   font-size: 35px;
 }
-.li {text-align: left !important; text-overflow: wrap;}
+.li {text-align: left !important; 
+  text-overflow: wrap;
+line-height: 1.5 !important;
+}
 
 .icon {height: 40px;
 width: 30px;}
 
-.iconbig { width: 0;
+.iconbig {
+  display: none;
   position: absolute;
-  -webkit-transition: width 0.3s linear 0s;
-  transition:width 0.3s linear 0s;
+   width: 90px;
+  height: 100px;
   z-index: 10;
-
 }
 
 .icon:hover + .iconbig {
-  height: 60px;
-  width: 50px;
+  display: inline-block;
 }
+
+#goals {
+  font-size: 18px;
+}
+
+.goals2 {
+  text-align: left;
+  padding: 20px;
+  margin: 20px auto;
+  background-color: #c3bcbd;
+  border-radius: 15px;
+  width: 600px;
+  height: auto;
+  line-height: 1.5;
+}
+
+#blockquote {
+  font-size: 30px;
+  font-style: italic;
+  font-family: fredoka;
+  color: #454561;
+  font-weight: bold;
+  text-align: center;
+  margin: 20px auto;
+  padding: 30px;
+  background-color: #c3bcbd;
+  border-radius: 15px;
+  width: 800px;
+  height: auto;}
+
+footer {
+  text-align: center;
+  padding: 20px;
+  margin: 20px auto;
+  background-color: #c3bcbd;
+  border-radius: 15px;
+  font-family: fredoka;
+  font-size: 18px;
+}
+
+table {
+  width: 100%;
+  max-width: 100%;
+  margin: 20px auto;
+}
+
+th {
+  text-align: center;
+}
+
+table, th, td {
+  border: 3px solid #0D0D61;
+border-collapse: collapse;
+}
+
+th, td {
+  padding: 10px;
+}
+
+table tr:first-child {
+  background-color: pink;
+}
+
+table tr:last-child {
+  background-color: pink !important;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #c3bcbd
+}
+
+tbody tr:nth-child(even) {
+  background-color: #ffffff; 
+}
+
+#table2 img{
+  width: 50px;
+  height: auto;
+}
+
+
 
 @media screen and (max-width:640px) {
-    .container {width: 100%;}
-    .quote-box {width: 70%;}
-    .img {width: fit-content;}
+  .container {width: 100%;}
+  .quote-box {width: 70%;}
+  .img {width: fit-content; }
+
+  #imgalison, #frogimage, #resumevideo{
+    display: block !important;
+    margin: 0 auto !important;
+    width: 90vw !important;
+    max-width: 300px !important;
+    height: auto !important;
+    float: none !important;
+  }
+ #table1 {
+  width: 100vw !important;
+  max-width: 100vw !important;
+  font-size: 14px !important;
+  
+ }
+
+.table-responsive {
+  width: 100vw;
+  overflow-x: auto;
+  display: block;
+}
+table {
+  width: 100%;
+  max-width: 100vw;
+  font-size: 14px;
+  margin: 0 auto;
+  
+}
+.video-container {
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
-
-
-
+  .video-container iframe,
+  .video-container video {
+    width: 100% !important;
+    max-width: 100vw !important;
+    height: auto !important;
+    display: block;
+  }
 
 table{
-width:1000px;
+width:100%;
+max-width:fit-content;
 background-color: #c3bcbd;
 margin-left: auto;
 margin-right: auto;
+overflow-x: auto;
 }
+
+.table-responsive {
+  width: 100vw;
+  overflow-x: auto;
+  display: block;
+}
+
 
 th {
   text-align: center;
@@ -257,6 +431,21 @@ img {
   width: 250px;
 }
 
+#credentials > p {
+  text-align: center;
+  font-size: 20px;
+  font-family: fredoka;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  gap: 20px;
+}
 /*Print Stylesheet*/
 @media print {
    
